# libcomm

./: Android.mk  LICENSE  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.ac  leakage.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: CommServer.cert  CommServer.key  Makefile.in  hello_http_async_client.cpp  hello_http_client.cpp  hello_http_server.cpp  hello_https_client.cpp  hello_https_server.cpp  http_basic_auth_client.cpp  http_basic_auth_server.cpp  http_oauth2_auth_client.cpp  http_oauth2_auth_server.cpp
lib/curl/: Makefile  config.mak  config.status  configure  curl-config  libcurl.pc  libtool
lib/curl/autom4te.cache/: output.0  requests  traces.0  traces.1
lib/curl/docs/: Makefile
lib/curl/docs/examples/: Makefile
lib/curl/docs/libcurl/: Makefile
lib/curl/docs/libcurl/opts/: Makefile
lib/curl/include/: Makefile
lib/curl/include/curl/: Makefile  curlbuild.h
lib/curl/lib/: Makefile  curl_config.h
lib/curl/src/: Makefile
lib/curl/tests/: Makefile
lib/curl/tests/certs/: Makefile
lib/curl/tests/certs/scripts/: Makefile
lib/curl/tests/data/: Makefile
lib/curl/tests/libtest/: Makefile
lib/curl/tests/server/: Makefile
lib/curl/tests/unit/: Makefile
lib/jsoncpp/: config.mak
lib/libasyncd/: config.mak
lib/libasyncd/examples/: helloworld_http_server.c  helloworld_ssl_server.c
lib/libasyncd/include/asyncd/: ad_http_handler.h  ad_server.h
lib/libasyncd/lib/qlibc/: configure.ac
lib/libasyncd/lib/qlibc/src/utilities/: qhash.c  qstring.c  qtime.c
lib/libasyncd/src/: ad_http_handler.c  ad_server.c
lib/libevent/: config.mak  epoll_sub.c
lib/libevent/android/event2/: event-config.h
src/: Makefile.am  Makefile.in  config.mak
src/client/: client-observer.cpp  client-observer.h  comm-basic-client.cpp  comm-basic-client.h  comm-client.cpp  comm-client.h  comm-oauth2-client.cpp  comm-oauth2-client.h  oauth2-client-observer.cpp  oauth2-client-observer.h
src/include/: ad-server-cb.h  auth-basic-observer.h  auth.h  comm-client.h  comm-logs.h  comm-oauth2-client.h  comm-patch.h  comm-server.h  oauth2-authorize-observer.h  page-control.h  util.h
src/logs/: comm-logs.cpp
src/server/: ad-server-cb.cpp  comm-macros.h  comm-server.cpp  comm-server.h  page-control.cpp  page-control.h  page-observer.cpp  page-observer.h  url-query.cpp  url-query.h
src/server/auth/: auth.cpp  auth.h
src/server/auth/basic/: auth-basic-observer.cpp  auth-basic.cpp  auth-basic.h
src/server/auth/oauth2/: auth-oauth2.cpp  auth-oauth2.h  oauth2-authorize-observer.cpp  oauth2-authorize-observer.h  oauth2-code-observer.cpp  oauth2-code-observer.h  oauth2-rfc6749.cpp  oauth2-rfc6749.h  oauth2-token-observer.cpp  oauth2-token-observer.h
src/server/auth/storage/: storage-mem.cpp  storage-mem.h  storage.cpp  storage.h
src/utils/: util-openssl.cpp  util-openssl.h  util.cpp
